MiddlewareAPI/deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: content-resources
  labels:
    app.kubernetes.io/managed-by: kubectl
